added login and registration functions as well as ability to post messages to the wall

--- a/static/wall_style.css
+++ b/static/wall_style.css
@@ -1,9 +1,15 @@
-*{
-  margin: 0;
-  border: 0;
-  padding: 0;
-  outline: 0;
-}
 #wrapper{
-  
+  margin: 10px auto 10px auto;
+  width: 600px;
+  height: 500px;
+  display: inline-block;
+  vertical-align: top;
+}
+form{
+  display: inline-block;
+  width: 290px;
+  vertical-align: top;
+}
+form *{
+  display: block;
 }
